--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<section>
+    <img src="../assets/img/favicon.png" alt="Name">
+    <div class="header-links">
+        <a href="">About me</a>
+        <a href="">Skills</a>
+        <a href="">Portfolio</a>
+    </div>
+</section>
