--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,8 +1,11 @@
 <section>
-    <img src="../assets/img/favicon.png" alt="Name">
-    <div class="header-links">
-        <a href="">About me</a>
-        <a href="">Skills</a>
-        <a href="">Portfolio</a>
-    </div>
+    <header>
+        <p class="logo">Pirathib</p>
+        <!-- <img src="../assets/img/favicon.png" alt="Name"> -->
+        <div class="header-links">
+            <a href="">About me</a>
+            <a href="">Skills</a>
+            <a href="">Portfolio</a>
+        </div>
+    </header>
 </section>
