--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -1,21 +1,38 @@
 section {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+
+header {
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid red;
     padding: 37px 100px;
     width: 100%;
     max-width: 1440px;
 
-    img {
-        width: 32px;
-        height: 32px;
-    }
+    // img {
+    //     width: 32px;
+    //     height: 32px;
+    // }
 }
 
 .header-links {
     display: flex;
     gap: 29px;
-
-
 } 
+
+.logo {
+    font-variant: small-caps;
+    font-weight: bolder;
+    font-size: 64px;
+    font-weight: 600;
+    margin: 0;
+
+    &:first-letter {
+        color: #4B47FF;
+    } 
+}
