added head style

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<section>
+    <footer>
+        <div>
+            <p class="logo">Pirathib</p>
+            <a href="">Impressum</a>
+        </div>
+        <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
+        <div class="socialmedia-btns">
+            <img src="assets/img/github-btn.png" alt="Github">
+            <img src="assets/img/mail-btn.png" alt="E-Mail">
+            <img src="assets/img/linkedin-btn.png" alt="Linkedin">
+        </div>
+    </footer>
+</section>
