--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,8 @@
 
 :root {
     --dark-blue: rgba(20, 29, 47, 1);
+    --light-blue: rgba(0, 190, 232, 1);
+    --purple: rgba(75, 71, 255, 1);
     --white: rgba(255, 255, 255, 1);
 
 }
@@ -28,4 +30,16 @@ a {
     color: white;
     cursor: pointer;
     user-select: none;
+}
+
+.logo {
+    font-variant: small-caps;
+    font-size: 64px;
+    font-weight: 600;
+    line-height: 52px;
+    margin: 0;
+
+    &:first-letter {
+        color: var(--purple);
+    } 
 }
