added atf section

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,10 +1,10 @@
 <section>
     <footer>
         <div>
-            <p class="logo">Pirathib</p>
+            <p class="logo">Mustermann</p>
             <a href="">Impressum</a>
         </div>
-        <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
+        <span class="copyright-div">&copy; Max Mustermann 2024</span>
         <div class="socialmedia-btns">
             <img src="assets/img/github-btn.png" alt="Github">
             <img src="assets/img/mail-btn.png" alt="E-Mail">
