--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <section>
     <header>
-        <p class="logo">Pirathib</p>
+        <p class="logo">Mustermann</p>
         <!-- <img src="../assets/img/favicon.png" alt="Name"> -->
         <div class="header-links">
             <a href="">About me</a>
