styled rotate iam section

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,9 +1,9 @@
 <section class="atf">
     <div class="atf-section">
         <img class="profile-img" src="assets/img/favicon.png" alt="Piri">
+        <p class="iam">I am</p>
         <div>
             <span>
-                <p>I am</p>
                 <p>Max Mustermann</p>
                 <p>FRONTEND DEVELOPER</p>
             </span>
