--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,10 +1,11 @@
 <section class="atf">
     <div class="atf-section">
-        <img class="profile-img" src="assets/img/favicon.png" alt="Piri">
+        <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+        <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
         <p class="iam">I am</p>
         <div>
             <span>
-                <p>Max Mustermann</p>
+                <p>Pirathib Mahalingam</p>
                 <p>FRONTEND DEVELOPER</p>
             </span>
             <button>Lets talk</button>
