edited atf section

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,14 +1,31 @@
+<img class="shape" src="assets/img/atf-shape.png" alt="Shape">
 <section class="atf">
     <div class="atf-section">
         <img class="profile-img" src="assets/img/piri.png" alt="Piri">
-        <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
-        <p class="iam">I am</p>
-        <div>
+        <div class="title-div">
             <span>
-                <p>Pirathib Mahalingam</p>
-                <p>FRONTEND DEVELOPER</p>
+                <p class="iam">I am</p>
+                <p class="title-name">Pirathib Mahalingam</p>
+                <p class="title-profession">FRONTEND DEVELOPER</p>
             </span>
             <button>Lets talk</button>
+        </div>
+    </div>
+    <div class="contact-div">
+        <div class="contact-section">
+            <div class="border"></div>
+            <div class="socialmedia-btns">
+                <img src="assets/img/github-btn.png" alt="Github">
+                <img src="assets/img/mail-btn.png" alt="E-Mail">
+                <img src="assets/img/linkedin-btn.png" alt="Linkedin">
+            </div>
+            <a href="">contact&#64;pirathib-mahalingam.com</a>
+        </div>
+    </div>
+    <div class="scroll-div">
+        <div class="scroll-section">
+            <a href="">Scroll down</a>
+            <img src="assets/img/arrow-down-line.png" alt="Arrow-down">
         </div>
     </div>
 </section>
