--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,45 +1,134 @@
+.shape {
+    width: 100%;
+}
+
 .atf {
     height: 100vh;
     width: 100%;
-    // background-image: url(/assets/img/atf-shape.png);
-    // background-position: bottom;
-    // background-repeat: no-repeat;
-    // background-size: contain;
-
-    button {
-        border: 0px;
-        border-radius: 10px;
-        padding: 15px 30px;
-        gap: 10px;
-        background-color: var(--light-blue);
-        cursor: pointer;
-
-        &:hover {
-            transform: scale(1.05);
-            transition: linear 125ms ease-out;
-        }
-    }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 120px;
+    gap: 120px;
 }
 
 .atf-section {
     display: flex;
     justify-content: center;
+}
+
+.title-div {
+    width: max-content;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    gap: 120px;
+    justify-content: center;
+    position: absolute;
+    top: 297px;
+    left: 622px;
+    gap: 35px;
+
+    button {
+        border: 0px;
+        border-radius: 10px;
+        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        padding: 15px 30px;
+        gap: 10px;
+        background-color: var(--light-blue);
+        color: white;
+        cursor: pointer;
+        margin-top: 32px;
+
+        &:hover {
+            transform: scale(1.2);
+            transition: linear 300ms ease-out;
+            background-color: var(--purple);
+        }
+    }
 }
 
 .profile-img {
+    position: absolute;
+    top: 106px;
+    left: 47px;
     width: 646px;
     height: 705px;
-    position: absolute;
+    z-index: -1;
 }
 
 .iam {
     position: absolute;
+    top: -8px;
+    left: -122px;
+    font-size: 64px;
+    line-height: 76.8px;
     transform: rotate(270deg);
 }
 
-.shape {
-    width: 100%;
-    position: relative;
+.title-name {
+    font-size: 90px;
+    font-weight: 700;
+    line-height: 108px;
+    margin: 0;
+}
+
+.title-profession {
+    font-size: 58px;
+    line-height: 69.6px;
+    color: var(--purple);
+    margin: 0;
+}
+
+.border {
+    width: 100px;
+    border: 4px solid var(--purple);
+} 
+
+.socialmedia-btns {
+    display: flex;
+    gap: 72px;
+
+    img {
+        width: 30px;
+        height: 30px;
+    };
+}
+
+.contact-div {
+    position: absolute;
+    left: 0;
+}
+
+.contact-section {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 42px;
+}
+
+.scroll-div {
+    position: absolute;
+    right: 0;
+}
+
+.scroll-section {
+    transform: rotate(90deg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 3px;
+
+    a {
+        font-size: 23px;
+        line-height: 27.6px;
+    }
+    
+
+    img {
+        width: 24px;
+        height: 24px;
+        transform: rotate(270deg);
+    }
 }
