added about-me section

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -5,7 +5,7 @@
         <div class="title-div">
             <span>
                 <p class="iam">I am</p>
-                <p class="title-name">Pirathib Mahalingam</p>
+                <h2 class="title-name">Pirathib Mahalingam</h2>
                 <p class="title-profession">FRONTEND DEVELOPER</p>
             </span>
             <button>Lets talk</button>
