--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-above-the-fold></app-above-the-fold>
+<app-about-me></app-about-me>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
