--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,13 @@ body {
     width: 100%;
 }
 
+h2 {
+    font-size: 90px;
+    line-height: 108px;
+    font-weight: 700;
+    margin: 0;
+}
+
 a {
     text-decoration: none;
     color: white;
