added portfolio section + work component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,6 @@
 <app-above-the-fold></app-above-the-fold>
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
+<app-portfolio></app-portfolio>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
