--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,6 @@
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
 <app-portfolio></app-portfolio>
+<app-contact></app-contact>
 <app-footer></app-footer>
 <router-outlet></router-outlet>
