--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -3,9 +3,9 @@
         <p class="logo">Pirathib</p>
         <!-- <img src="../assets/img/favicon.png" alt="Name"> -->
         <div class="header-links">
-            <a href="">About me</a>
-            <a href="">Skills</a>
-            <a href="">Portfolio</a>
+            <a class="about-me" href="">About me</a>
+            <a class="skills" href="">Skills</a>
+            <a class="portfolio" href="#portfolio" id="portfolio" (click)="visited()">Portfolio</a>
         </div>
     </header>
 </section>
