--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -30,19 +30,20 @@
     gap: 35px;
 
     button {
-        border: 0px;
+        font-size: 23px;
+        line-height: 27.6px;
+        border: 0;
         border-radius: 10px;
-        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
         padding: 15px 30px;
+        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
         gap: 10px;
         background-color: var(--light-blue);
         color: white;
         cursor: pointer;
-        margin-top: 32px;
+        transition: 125ms ease-out;
 
         &:hover {
-            transform: scale(1.2);
-            transition: linear 300ms ease-out;
+            padding: 20px 40px;
             background-color: var(--purple);
         }
     }
@@ -113,17 +114,18 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 3px;
+    gap: 11px;
+    user-select: none;
 
-    a {
+    p {
         font-size: 23px;
         line-height: 27.6px;
     }
     
 
     img {
-        width: 24px;
-        height: 24px;
+        width: 16px;
+        height: 16px;
         transform: rotate(270deg);
     }
 }
