--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -17,17 +17,17 @@ h2 {
 }
 
 .text-div {
-    width: 50%;
+    min-width: 50%;
 }
 
-.input-div {
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     gap: 10px;
 
-    input,
+    input[type="text"], 
     textarea {
         font-size: 16px;
         line-height: 19.2px;
@@ -47,10 +47,9 @@ h2 {
         }
     }
 
-    input {
+    input[type="text"] {
         width: 617px;
         height: 50px;
-
     }
 
     textarea {
@@ -59,19 +58,16 @@ h2 {
     }
 }
 
-.submit-btn {
+input[type="submit"] {
     font-size: 23px;
     line-height: 27.6px;
     color: white;
     background-color: rgba(182, 182, 182, 1);
+    border: none;
     border-radius: 10px;
     padding: 15px 30px;
     box-shadow: 4px 4px 4px 0px solid rgba(0, 0, 0, 0.25);
     gap: 10px;
-
-    &:active {
-        border-style: outset;
-    }
 }
 
 .checkbox-div {
@@ -89,14 +85,10 @@ h2 {
     }
 }
 
-.goup-btn {
+.go-up-btn {
     width: 39px;
     height: 39px;
     position: absolute;
     right: 16px;
-
-    &:hover {
-        transform: scale(1.1);
-        transition: linear 200ms ease-in-out;
-    }
+    transition: 200ms ease-in-out;
 }
