--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -27,29 +27,35 @@ section {
         font-weight: 700;
         line-height: 19.2px;
     }
+
+    img {
+        height: 60px
+    };
 }
 
 
 .title-div {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    margin-bottom: 64px; // still optimize opportunity
 
     button {
-        border: 0px;
+        font-size: 23px;
+        line-height: 27.6px;
+        border: 0;
         border-radius: 10px;
-        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
         padding: 15px 30px;
+        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
         gap: 10px;
         background-color: var(--light-blue);
         color: white;
         cursor: pointer;
-        margin-top: 32px;
+        transition: 125ms ease-out;
 
         &:hover {
-            transform: scale(1.2);
-            transition: linear 300ms ease-out;
+            padding: 20px 40px;
             background-color: var(--purple);
         }
     }
