--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,9 +6,9 @@
         </div>
         <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
         <div class="socialmedia-btns">
-            <img src="assets/img/github-btn.png" alt="Github">
-            <img src="assets/img/mail-btn.png" alt="E-Mail">
-            <img src="assets/img/linkedin-btn.png" alt="Linkedin">
+            <a href=""><img src="assets/img/github-btn.svg" alt="Github"></a>
+            <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
+            <a href=""><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
         </div>
     </footer>
 </section>
