--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -18,7 +18,7 @@
                 }
 
                 <div class="checkbox-div">
-                    <input type="checkbox" value="">
+                    <img src="assets/img/checkbox/default.svg" alt="">
                     <p>I've read the
                         <a href="">privacy policy </a>
                         and agree to the processing of my data as outlined.
