--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,13 @@
 @font-face {
     font-family: 'Poppins';
+    font-weight: 400;
     src: url(../src/assets/fonts/Poppins-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Poppins';
+    font-weight: 700;
+    src: url(../src/assets/fonts/Poppins-Bold.ttf);
 }
 
 html {
