--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,11 +5,11 @@
             <p>Hi, I am a Front-end developer based in Kreuzlingen, Switzerland. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut auctor sem non tempus convallis. Integer et justo vitae urna finibus eleifend sit amet porttitor sapien.</p>
             <div class="keys-section">
                 <div class="keys-div">
-                    <img class="icon" src="assets/img/bulb.png" alt="">
+                    <img class="icon" src="assets/img/bulb.svg" alt="">
                     <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                 </div>
                 <div class="keys-div">
-                    <img class="icon" src="assets/img/puzzle.png" alt="">
+                    <img class="icon" src="assets/img/puzzle.svg" alt="">
                     <p>Some personal thing to share(...) Donec ut imperdiet diam, et convallis neque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                 </div>
             </div>
