--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,14 @@
 <section>
     <footer>
-        <div>
+        <div class="left-section">
             <p class="logo">Pirathib</p>
-            <a href="">Impressum</a>
+            <a href="" class="imprint">Impressum</a>
         </div>
         <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
         <div class="socialmedia-btns">
-            <a href=""><img src="assets/img/github-btn.svg" alt="Github"></a>
+            <a href="https://github.com" target="_blank"><img src="assets/img/github-btn.svg" alt="Github"></a>
             <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
-            <a href=""><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
+            <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg" alt="Linkedin"></a>
         </div>
     </footer>
 </section>
