--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,7 +1,7 @@
 <section>
     <footer>
         <div class="left-section">
-            <p class="logo">Pirathib</p>
+            <img src="assets/img/logo.png" alt="Logo">
             <a href="" class="imprint">Impressum</a>
         </div>
         <span class="copyright-div">&copy; Pirathib Mahalingam 2024</span>
