--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,6 @@
 <section>
     <header>
-        <p class="logo">Pirathib</p>
-        <!-- <img src="../assets/img/favicon.png" alt="Name"> -->
+        <img src="../assets/img/logo.png" alt="Name">
         <div class="header-links">
             <a [ngClass]="{'visited': activeLink === 'about-me-title'}" class="about-me" href="#about-me" id="about-me-title" (click)="visited('about-me-title')">About me</a>
             <a [ngClass]="{'visited': activeLink === 'skills-title'}" class="skills" href="#skills" id="skills-title" (click)="visited('skills-title')">Skills</a>
