--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -3,14 +3,14 @@
     <div class="atf-section">
         <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
         <img class="profile-img" src="assets/img/piri.png" alt="Piri">
-        <div class="title-div">
+        <!-- <div class="title-div">
             <span>
                 <p class="iam">I am</p>
                 <h2 class="title-name">Pirathib Mahalingam</h2>
                 <p class="title-profession">FRONTEND DEVELOPER</p>
             </span>
             <a href="#contact"> <button>Let's talk!</button></a>
-        </div>
+        </div> -->
     </div>
     <div class="contact-div">
         <div class="contact-section">
