--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,21 +1,36 @@
-.shape {
-    width: 100%;
-}
-
 .atf {
-    height: 100vh;
-    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 120px;
-    gap: 120px;
+    width: 100%;
+    height: 100vh;
 }
 
 .atf-section {
+    position: absolute;
+    top: 120px;
+    gap: 120px;
+    width: 100%;
+    max-width: 1440px;
+    height: calc(100% - 120px);
     display: flex;
     justify-content: center;
+    border: 1px solid red;
+}
+
+.shape {
+    width: 1442px;
+    height: 1078.6px;
+    position: absolute;
+    top: 377.6px;
+}
+
+.profile-img {
+    position: absolute;
+    top: 106px;
+    left: 47px;
+    width: 646px;
+    height: 705px;
+    z-index: 0;
 }
 
 .title-div {
@@ -49,17 +64,8 @@
     }
 }
 
-.profile-img {
-    position: absolute;
-    top: 106px;
-    left: 47px;
-    width: 646px;
-    height: 705px;
-    z-index: -1;
-}
-
 .iam {
-    position: absolute;
+    position: relative;
     top: -8px;
     left: -122px;
     font-size: 64px;
@@ -102,7 +108,7 @@
 }
 
 .contact-div {
-    position: absolute;
+    position: relative;
     left: 0;
     bottom: 210px;
 }
@@ -116,7 +122,6 @@
 }
 
 .scroll-div {
-    position: absolute;
     right: 0;
     bottom: 255px;
 }
