--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -16,6 +16,7 @@ header {
     padding: 37px 100px;
     width: 100%;
     max-width: 1440px;
+    border: 1px solid red;
     height: auto;
 
     img {
