--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,10 +33,12 @@ body {
     background-color: var(--dark-blue);
 }
 
-.root-div {
-    width: 100%;
-    max-width: 1440px;
-}
+// .root-div {
+//     width: 100vw;
+//     max-width: 1440px;
+//     height: 100vh;
+//     border: 1000px solid red;
+// }
 
 h2 {
     font-size: 90px;
