edited atf + styled

--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -1,32 +1,39 @@
-
-<section id="atf" class="atf">
+<div id="atf" class="atf">
     <div class="atf-section">
         <img class="shape" src="assets/img/atf-shape.png" alt="Shape">
-        <img class="profile-img" src="assets/img/piri.png" alt="Piri">
-        <!-- <div class="title-div">
-            <span>
-                <p class="iam">I am</p>
-                <h2 class="title-name">Pirathib Mahalingam</h2>
-                <p class="title-profession">FRONTEND DEVELOPER</p>
-            </span>
-            <a href="#contact"> <button>Let's talk!</button></a>
-        </div> -->
-    </div>
-    <div class="contact-div">
-        <div class="contact-section">
-            <div class="border"></div>
-            <div class="socialmedia-btns">
-                <img src="assets/img/github-btn.svg" alt="Github">
-                <img src="assets/img/mail-btn.svg" alt="E-Mail">
-                <img src="assets/img/linkedin-btn.svg" alt="Linkedin">
+        <div class="atf-undersection">
+            <div class="atf-content">
+                <img class="profile-img" src="assets/img/piri.png" alt="Piri">
+                <div class="right-section">
+                    <div class="title-div">
+                        <span>
+                            <p class="iam">I am</p>
+                            <h2 class="title-name">Pirathib Mahalingam</h2>
+                            <p class="title-profession">FRONTEND DEVELOPER</p>
+                        </span>
+                        <a href="#contact"><button>Let's talk!</button></a>
+                    </div>
+                </div>
             </div>
-            <a href="#contact">contact&#64;pirathib-mahalingam.com</a>
+            <div class="atf-links">
+                <div class="contact-div">
+                    <div class="contact-section">
+                        <div class="border"></div>
+                        <div class="socialmedia-btns">
+                            <img src="assets/img/github-btn.svg" alt="Github">
+                            <img src="assets/img/mail-btn.svg" alt="E-Mail">
+                            <img src="assets/img/linkedin-btn.svg" alt="Linkedin">
+                        </div>
+                        <a href="#contact">contact&#64;pirathib-mahalingam.com</a>
+                    </div>
+                </div>
+                <div class="scroll-div">
+                    <div class="scroll-section">
+                        <p>Scroll down</p>
+                        <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-    <div class="scroll-div">
-        <div class="scroll-section">
-            <p>Scroll down</p>
-            <img src="assets/img/arrow-down-line.svg" alt="Arrow-down">
-        </div>
-    </div>
-</section>
+</div>
