--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -1,20 +1,20 @@
 .atf {
-    display: flex;
-    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
+    border: 1px solid yellow;
 }
 
 .atf-section {
-    position: absolute;
-    top: 120px;
+    height: 100%;
     gap: 120px;
-    width: 100%;
-    max-width: 1440px;
-    height: calc(100% - 120px);
     display: flex;
     justify-content: center;
-    border: 1px solid red;
+    position: relative;
 }
 
 .shape {
@@ -22,15 +22,41 @@
     height: 1078.6px;
     position: absolute;
     top: 377.6px;
+    bottom: 0;
+}
+
+.atf-undersection {
+    width: 100%;
+    max-width: 1440px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    // display: flex;
+    // justify-content: center;
+    border: 1px solid red;
+}
+
+.atf-content {
+    display: flex;
 }
 
 .profile-img {
-    position: absolute;
-    top: 106px;
+    position: relative;
+    top: 140px;
     left: 47px;
     width: 646px;
     height: 705px;
-    z-index: 0;
+    z-index: -1;
+}
+
+.right-section {
+    position: relative;
+    top: 255px;
+    left: 80px;
+    // top: 297px;
+    width: max-content;
+    height: max-content;
+    text-align: center;
 }
 
 .title-div {
@@ -39,10 +65,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 297px;
-    left: 622px;
+    // position: relative;
+    // top: 297px;
+    // left: 622px;
     gap: 35px;
+
+    h2 {
+        font-size: 56px;
+        line-height: 58px;
+    }
 
     button {
         font-size: 23px;
@@ -66,10 +97,11 @@
 
 .iam {
     position: relative;
-    top: -8px;
-    left: -122px;
-    font-size: 64px;
-    line-height: 76.8px;
+    top: 99px;
+    right: 350px;
+    font-size: 50px;
+    // line-height: 76.8px;
+    // font-size: 64px;
     transform: rotate(270deg);
 }
 
@@ -107,10 +139,18 @@
     }
 }
 
+.atf-links {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
 .contact-div {
     position: relative;
-    left: 0;
-    bottom: 210px;
+    top: 164px;
+    // position: relative;
+    // left: 0;
+    // bottom: 210px;
 }
 
 .contact-section {
@@ -122,8 +162,11 @@
 }
 
 .scroll-div {
-    right: 0;
-    bottom: 255px;
+    position: relative;
+    top: 70px;
+    // position: relative;
+    // right: 0;
+    // bottom: 255px;
 }
 
 .scroll-section {
