--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -24,7 +24,7 @@
                             <img src="assets/img/mail-btn.svg" alt="E-Mail">
                             <img src="assets/img/linkedin-btn.svg" alt="Linkedin">
                         </div>
-                        <a href="#contact">contact&#64;pirathib-mahalingam.com</a>
+                        <a href="#contact">hello&#64;pirathib-mahalingam.com</a>
                     </div>
                 </div>
                 <div class="scroll-div">
