--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -1,18 +1,35 @@
-section {
-    margin: 200px 32px;
+.skills {
+    position: absolute;
+    top: 1838px;
+    right: 0;
+    left: 0;
     display: flex;
+    justify-content: center;
+    border: 1px solid yellow;
+}
+
+.skills-section {
+    width: 100%;
+    max-width: 1440px;
+    height: 100%;
+    border: 1px solid red;
+    display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
-
+.skills-content {
+    display: flex;
+}
 
 .icon-div {
+    margin-left: 100px;
+    margin-right: 45px;
     display: flex;
     flex-wrap: wrap;
     gap: 123px;
     row-gap: 56px;
 }
-
 
 .icons {
     display: flex;
@@ -47,38 +64,73 @@ section {
     }
 }
 
+.title-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 50px;
+}
+
+.title-header {
+    width: 571px;
+    height: 180px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    h2 {
+        display: flex;
+        gap: 35px;
+    }
+
+    p {
+        text-wrap: wrap;
+        width: 471px;
+        text-align: right;
+        gap: 34px;
+    }
+}
 
 .title-div {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
     justify-content: center;
-    margin-bottom: 64px; // still optimize opportunity
+}
 
-    button {
-        font-size: 23px;
-        line-height: 27.6px;
-        border: 0;
-        border-radius: 10px;
-        padding: 15px 30px;
-        box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
-        gap: 10px;
-        background-color: var(--light-blue);
-        color: white;
-        cursor: pointer;
-        transition: 125ms ease-out;
+.button-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
-        &:hover {
-            padding: 20px 40px;
-            background-color: var(--purple);
-        }
+.button {
+    font-size: 23px;
+    line-height: 27.6px;
+    border: 0;
+    border-radius: 10px;
+    padding: 15px 30px;
+    box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    gap: 10px;
+    background-color: var(--light-blue);
+    color: white;
+    cursor: pointer;
+    transition: 125ms ease-out;
+    position: relative;
+    top: 44px;
+
+    &:hover {
+        padding: 20px 40px;
+        background-color: var(--purple);
     }
 }
 
 .border {
     position: relative;
-    top: -50px;
-    left: 370px;
+    top: 50px;
+    left: 305px;
     width: 58px;
     border-top: 4px solid var(--purple);
 }
