edited portfolio + styled

--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -13,9 +13,6 @@
     max-width: 1440px;
     height: 100%;
     border: 1px solid red;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 }
 
 .skills-content {
@@ -24,7 +21,6 @@
 
 .icon-div {
     margin-left: 100px;
-    margin-right: 45px;
     display: flex;
     flex-wrap: wrap;
     gap: 123px;
@@ -75,7 +71,7 @@
 
 .title-header {
     width: 571px;
-    height: 180px;
+    // height: 180px;
     display: flex;
     flex-direction: column;
     align-items: center;
