--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <app-above-the-fold></app-above-the-fold>
 <app-about-me></app-about-me>
 <app-my-skills></app-my-skills>
-<!-- <app-portfolio></app-portfolio>
-<app-contact></app-contact>
+<app-portfolio></app-portfolio>
+<!-- <app-contact></app-contact>
 <app-footer></app-footer> -->
 <router-outlet></router-outlet>
