--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,13 +1,15 @@
-<section id="portfolio">
-    <div class="header">
-        <div>
-            <h2>
-                <div class="border-left"></div>
-                Portfolio
-                <div class="border-right"></div>
-            </h2>
-            <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>    
+<div class="portfolio" id="portfolio">
+    <div class="portfolio-content">
+        <div class="portfolio-header">
+            <div>
+                <h2>
+                    <div class="border-left"></div>
+                    Portfolio
+                    <div class="border-right"></div>
+                </h2>
+                <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>    
+            </div>
         </div>
+        <app-work></app-work>
     </div>
-    <app-work></app-work>
-</section>
+</div>
