--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,4 +1,24 @@
-.header {
+.portfolio {
+    position: absolute;
+    top: 2429px;
+    right: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    border: 1px solid yellow;
+}
+
+.portfolio-content {
+    width: 100%;
+    max-width: 1440px;
+    height: 100%;
+    border: 1px solid red;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.portfolio-header {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
@@ -7,6 +27,10 @@
 h2 {
     display: flex;
     justify-content: flex-end;
+}
+
+p {
+    margin-top: 32px;
 }
 
 .border-left {
