--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -10,6 +10,6 @@
                 <p>Explore a selection of my work here - Interact with projects to see my skills in action.</p>    
             </div>
         </div>
-        <app-work></app-work>
+        <app-work class="work"></app-work>
     </div>
 </div>
