--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -18,7 +18,7 @@
         </div>
         <div class="img-div">
             <div class="profile-img">
-                <img src="assets/img/piri-profile.png" alt="">
+                <img src="assets/img/laptop.png" alt="">
             </div>
             <div class="border"></div>
         </div>
