--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,9 +1,9 @@
-<section *ngFor="let project of work; let i = index">
-    <div *ngIf="1 % 2 === 0; else oddTemplate">
-        <div class="left-section">
+<!-- <div class="work-content" *ngFor="let project of work; let i = index">
+    <div *ngIf="i % 2 === 0; else oddTemplate" class="work-content">
+        <div class="img-section">
             <img src="{{ project.img }}" alt="">
         </div>
-        <div class="right-section">
+        <div class="info-section mg-l-172">
             <h3>{{ project.title }}</h3>
             <h4>{{ project.subtitle }}</h4>
             <p>{{ project.description }}</p>
@@ -13,8 +13,8 @@
             </div>
         </div>
     </div>
-    <ng-template #oddTemplate>
-        <div class="right-section">
+    <ng-template #oddTemplate class="odd-template">
+        <div class="info-section mg-l-100">
             <h3>{{ project.title }}</h3>
             <h4>{{ project.subtitle }}</h4>
             <p>{{ project.description }}</p>
@@ -23,8 +23,46 @@
                 <button class="github-btn">Github</button>
             </div>
         </div>
-        <div class="left-section">
+        <div class="img-section">
             <img src="{{ project.img }}" alt="">
         </div>
     </ng-template>
-</section>
+</div> -->
+
+
+<table>
+    <tbody class="work-content">
+        <ng-container *ngFor="let project of work; let i = index">
+            <tr *ngIf="i % 2 === 0; else oddTemplate" class="work-div align-left">
+                <td class="img-section right">
+                    <img src="{{ project.img }}" alt="">
+                </td>
+                <td class="info-section p-172">
+                    <h3>{{ project.title }}</h3>
+                    <h4>{{ project.subtitle }}</h4>
+                    <p>{{ project.description }}</p>
+                    <div class="btn-div flex-start">
+                        <button class="livetest-btn">Live Test</button>
+                        <button class="github-btn">Github</button>
+                    </div>
+                </td>
+            </tr>
+            <ng-template #oddTemplate>
+                <tr class="work-div align-right">
+                    <td class="info-section p-100">
+                        <h3>{{ project.title }}</h3>
+                        <h4>{{ project.subtitle }}</h4>
+                        <p>{{ project.description }}</p>
+                        <div class="btn-div flex-end">
+                            <button class="livetest-btn">Live Test</button>
+                            <button class="github-btn">Github</button>
+                        </div>
+                    </td>
+                    <td class="img-section">
+                        <img src="{{ project.img }}" alt="">
+                    </td>
+                </tr>
+            </ng-template>
+        </ng-container>
+    </tbody>
+</table>
